<resources>
    <string name="app_name">LogRecordProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm new Password</string>
    <string name="button_login_text">Login</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title">Log Exception Reports</string>
</resources>
